k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wrappp-web
  namespace: default
  labels:
    app: wrappp-web
spec:
  type: ClusterIP
  selector:
    app: wrappp-web
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
